src/test/ui/typeck/issue-96738.rs
fn main() {
    Some.nonexistent_method(); //~ ERROR: no method named `nonexistent_method` found
}
